<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:title="@string/chairs"
        android:id="@+id/chairs_id"
        android:icon="@drawable/icon"/>
    <item
        android:title="@string/tables"
        android:id="@+id/tables_id"
        android:icon="@drawable/icon"/>
    <item
        android:title="@string/plates"
        android:icon="@drawable/icon"
        android:id="@+id/plates_id"/>
    <item
        android:title="@string/food"
        android:id="@+id/food_id"
        android:icon="@drawable/icon"/>
    </group>
    <item android:title="@string/subheader">
        <menu>
            <item
                android:title="@string/all_material"
                android:id="@+id/allmaterial_id"
                android:icon="@drawable/icon"/>
            <item
                android:title="@string/dishes"
                android:id="@+id/dishes_id"
                android:icon="@drawable/icon"/>
            <item
                android:title="@string/cleaner"
                android:id="@+id/cleaner_id"
                android:icon="@drawable/icon"/>




        </menu>



    </item>


</menu>