<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:background="@drawable/g">
    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/c"
        android:scaleType="centerCrop"
        android:contentDescription="@string/my_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inam_igeno"
        android:textColor="@color/colorPrimary"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inamgeno_gmail_com"
        android:shadowColor="@color/colorPrimaryDark"
        android:paddingTop="4dp"/>

</LinearLayout>